<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoActivity">

    <ImageView
        android:id="@+id/posterFilmInInfo"
        android:layout_width="170dp"
        android:layout_height="140dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img"
        android:contentDescription="@string/hh" />

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/posterFilmInInfo">


        <TextView
            android:id="@+id/film_name_info"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/film_name_info"
            android:textSize="20sp"
            android:layout_marginStart="2dp"/>

        <TextView
            android:id="@+id/filmNameInInfo"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/film_name_info"
            android:text="@string/film_name"
            android:layout_marginStart="8dp"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/film_year_info"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/film_name_info"
            android:layout_marginTop="10dp"
            android:text="@string/film_year_info"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/filmYearInInfo"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/film_year_info"
            android:layout_below="@id/filmNameInInfo"
            android:text="@string/film_year"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"/>


        <TextView
            android:id="@+id/film_director_info"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/film_year_info"
            android:layout_marginTop="10dp"
            android:text="@string/director"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/filmDirectorInInfo"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/film_director_info"
            android:layout_below="@id/filmYearInInfo"
            android:text="@string/director_info"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"/>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>