<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:cardElevation="6dp"
        app:cardMaxElevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/poster"
                android:layout_width="80dp"
                android:layout_height="100dp"
                android:src="@drawable/img"
                android:contentDescription="@string/gg" />

            <TextView
                android:id="@+id/filmName"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/film_name"
                android:layout_toEndOf="@id/poster"
                android:textSize="20sp"
                android:layout_marginStart="5dp" />

            <TextView
                android:id="@+id/filmYear"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/filmName"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="10dp"
                android:text="@string/film_year"
                android:textSize="20sp"
                android:textAlignment="center"/>


            <TextView
                android:id="@+id/filmDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/filmName"
                android:layout_toEndOf="@id/poster"
                android:text="@string/film_description"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:layout_marginStart="5dp"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>